# PothosNumPy

./: .gitignore  CMakeLists.txt  Changelog.txt  LICENSE.txt  README.md  TODO.md
BlockGen/: .gitignore  BlockExecutionTest.mako.cpp  Blocks.yaml  CppEntryPoints.mako.py  Factory.mako.cpp  GenBlocks.py  PothosDoc.mako.py  PythonFactoryFunction.mako.py  PythonFunc.mako.py  PythonSubclass.mako.py
BlockGen/Blocks/: Arithmetic.yaml  Binary.yaml  Complex.yaml  CppOnly.yaml  Exponential.yaml  FactoryOnly.yaml  Random.yaml  Rounding.yaml  Sources.yaml  Special.yaml  Stats.yaml  Stream.yaml  Trig.yaml  binary.yaml  complex.yaml  misc.yaml  special.yaml  trig.yaml
Cpp/: Factory.cpp  NumericInfo.cpp  RegisteredCalls.cpp
CppBlocks/: CMakeLists.txt  SciPyConstants.cpp  TestConstants.cpp  TestSimpleSources.cpp  TestUtility.hpp
Examples/: Stats.pothos
PothosSciPy/: CMakeLists.txt  NumPySaveZ.py  NumPySqrt.py  SimpleBlocks.py  SimpleSource.py  SplineBlocks.py  __init__.py
Python/: AsType.py  BaseBlock.py  BaseBlock.py.in  CppFactories.py  FFT.py  FileSink.py  FileSource.py  ForwardAndPostLabelBlock.py  Load.py  NToOneBlock.py  NumPySave.py  OneToOneBlock.py  PostBufferBlock.py  Random.py  RegisteredCallHelpers.py  Save.py  SaveZ.py  SimpleBlock.py  SimpleBlocks.py  SimpleSource.py  Source.py  SplineBlocks.py  TestFuncs.py  TwoToOneBlock.py  Utility.py  Window.py  __init__.py  __init__.py.in
Testing/: BlockExecutionTest.cpp  BlockExecutionTest.hpp  BlockExecutionTestManual.cpp  CMakeLists.txt  SimpleBlockTest.hpp  TestArithmeticBlocks.cpp  TestAsType.cpp  TestBitwise.cpp  TestConjugate.cpp  TestConstants.cpp  TestFFT.cpp  TestLabels.cpp  TestLog.cpp  TestNaNToNum.cpp  TestNumPyFileIO.cpp  TestNumPySqrt.cpp  TestOneToOneBlocks.cpp  TestPowRoot.cpp  TestRandomSources.cpp  TestRegisteredCalls.cpp  TestSetDiff1D.cpp  TestSetXOr1D.cpp  TestSimpleBlocks.cpp  TestSimpleSources.cpp  TestSingleOutputSources.cpp  TestStreamManipBlocks.cpp  TestTrigonometric.cpp  TestTwoToOneBlocks.cpp  TestUnion1D.cpp  TestUnique.cpp  TestUtility.cpp  TestUtility.hpp  TestWindow.cpp  TwoToOneBlockTest.hpp
cmake/: BuildPythonModule.cmake
